# quantitative-system

./: AGENTS.md  README.md  pyproject.toml
config/: stock_pool.example.txt
doc/: chan_theory_for_beginners.md  chan_theory_usage.md  cli_design.md  divergence_signal_design.md  fund_flow_design.md  price_volume_cognition.md  quantitative_system_architecture.md  sell_decision_design.md  stock_indicators.md  缠论学习.md
src/: __init__.py  cli.py  web.py
src/analysis/: advisor.py  chan_theory.py  divergence.py  fund_flow.py  indicators.py  market_scanner.py  ml_model.py  patterns.py  scanner.py  sell_advisor.py  service.py
src/data/: errors.py  fund_flow.py  models.py  public_sources.py  source.py
src/output/: __init__.py  formatter.py
src/quant_system/: cli.py  web.py
src/quant_system/analysis/: __init__.py  advisor.py  indicators.py  market_scanner.py  ml_model.py  patterns.py  scanner.py  service.py
src/quant_system/data/: __init__.py  public_sources.py  source.py
src/quant_system/output/: formatter.py
src/quant_system/web_static/: app.js  index.html
src/web_static/: app.js  index.html  styles.css
tests/: test_advisor.py
