[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "quantitative-system"
version = "0.1.0"
description = "股票量价分析 CLI"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
quant = "cli:main"
quant-web = "web:main"

[tool.setuptools]
py-modules = ["cli", "web"]

[tool.setuptools.packages.find]
where = ["src"]

